package org.trishinfotech.proxy;

public interface TrainTimetable {
    public String[] getTimetable();
    public String getTrainDepartureTime(String trainId);
}
